<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/instructionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/colorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_color" />

        <RadioButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_text" />
    </RadioGroup>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label" />
    <TextView
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/empty"
        android:textColor="#0C0C0C"
        android:background="#4F4F4F" />

</LinearLayout>